@@ -1,6 +1,8 @@
 v3.6.0 (XXXX-XX-XX)
 -------------------
 
+* Fixed a permissions bug for /_admin/cluster/rebalanceShards.
+
 * Fixed a bug in smart graph bfs traversals that might violate path uniqueness
   requirements in rare cases.
 
